# NectereDiscord

./: CMakeLists.txt  README.md
src/: Discord.cpp
